--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
